Fix bug with new artist page layout on mobile

--- a/_sass/page_artist.scss
+++ b/_sass/page_artist.scss
@@ -29,6 +29,8 @@
 
 .post-header {
 	height: 50vh;
+	overflow:hidden;
+	
 	.text {
 	    position: absolute;
 	    z-index: 100;
